# tetris

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCS_SUMMARY.md  LICENSE  QUICK_START.md  README.md  TETRIS_GUIDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: Board.h  Game.h  Player.h  Renderer.h  Tetromino.h
src/: Board.cpp  Game.cpp  Player.cpp  Renderer.cpp  Tetromino.cpp  main.cpp
